--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "@fastify/static": "^8.2.0",
     "@nestjs/common": "^11.1.2",
     "@nestjs/core": "^11.1.2",
-    "@nestjs/platform-fastify": "^11.1.2"
+    "@nestjs/platform-fastify": "^11.1.2",
+    "@nestjs/swagger": "^11.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2"
   }
 }
